--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -14,14 +14,14 @@
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-<!--
+
 	<resource-ref>
-		<description>City DB</description>
-		<res-ref-name>jdbc/CityDB</res-ref-name>
+		<description>DB of Distance Calculator</description>
+		<res-ref-name>jdbc/DistanceCalculator</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
--->
+
     <welcome-file-list>
         <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
