--- a/war/pom.xml
+++ b/war/pom.xml
@@ -47,20 +47,6 @@
             <artifactId>commons-io</artifactId>
             <version>1.0</version>
         </dependency>
-        <!--
-<dependency>
-<groupId>edu.emory.mathcs.util</groupId>
-<artifactId>emory-util-concurrent</artifactId>
-<version>2.1</version>
-</dependency>
--->
-        <!--
-<dependency>
-    <groupId>net.sf.retrotranslator</groupId>
-    <artifactId>retrotranslator-runtime</artifactId>
-    <version>1.2.1</version>
-</dependency>
--->
 
         <dependency>
             <groupId>javax</groupId>
@@ -97,6 +83,22 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>xjc</id>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <packageName>com.magenta.calculator.cities</packageName>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
